--- a/assets/style15.css
+++ b/assets/style15.css
@@ -10,12 +10,12 @@
     }
     @font-face {
       font-family: Prompt;
-      src: url(../assets/fonts/Prompt-Bold.ttf);
+      src: url(fonts/Prompt-Bold.ttf);
       
     }
     @font-face {
       font-family: Prompt-italic;
-      src: url(../assets/fonts/Prompt-BoldItalic.ttf);
+      src: url(fonts/Prompt-BoldItalic.ttf);
     }
 
     /*ชุด CSS พิเศษสำหรับหน้า Salepage*/
@@ -43,20 +43,22 @@
 
 /*ล็อคขนาดรูปเครือข่าย*/
       .nav-link-image {height: 100px;}
+/*ปรับขนาดรูปซิมหน้าแรก*/
+      .nav-sim-image {height: 100px;}
 /*สี bg แท็บชื่อเครือข่าย*/
-      .greenbg{background-color: #A93CC7; text-align: center; padding:10px 10px;}
+      .greenbg{background-color: #7fa838; text-align: center; padding:10px 10px;}
       .redbg{background-color: #FF3300; text-align: center; padding:10px 10px;}
       .bluebg{background-color: #3366CC; text-align: center; padding:10px 10px;}
 /* สีปุ่มไล่สี*/
-      .btGreenbg{border-radius: 15px;background-image: -webkit-linear-gradient( -90deg, rgb(169, 60, 199) 0%, rgb(152, 54, 179) 56%, rgb(135, 48, 159) 100%);}
+      .btGreenbg{border-radius: 15px;background-image: -webkit-linear-gradient( -90deg, rgb(81, 199, 45) 0%, rgb(50, 172, 34) 56%, rgb(76, 167, 16) 100%);}
       .btRedbg{border-radius: 15px;background-image: -webkit-linear-gradient( -90deg, rgb(255,0,0) 0%, rgb(201,48,48) 56%, rgb(184,57,57) 100%)}
       .btBluebg{border-radius: 15px;background-image: -webkit-linear-gradient( -90deg, rgb(51, 102, 204) 0%, rgb(45, 91, 183) 56%, rgb(40, 81, 163) 100%)}
 /*เปลี่ยนสีเงากล่องรายการ*/
-      .shadowGreen{box-shadow: 0px 1px 10px 2.16px rgba(169, 60, 199, 0.25);}
-      .shadowRed{box-shadow: 0px 1px 10px 2.16px rgba(255, 51, 0, 0.25);}
+      .shadowGreen{box-shadow: 0px 1px 10px 2.16px rgba(99, 199, 60, 0.25);}
+      .shadowRed{box-shadow: 0px 1px 10px 2.16px rgba(199, 112, 12, 0.25);}
       .shadowBlue{box-shadow: 0px 1px 10px 2.16px rgba(51, 102, 204, 0.25);}
 /*สี bg Instruction ของแต่ละเครือข่าย*/
-      .greenIns{background-color: #996666; padding:10px 10px;}
+      .greenIns{background-color: #7fa838; padding:10px 10px;}
       .redIns{background-color: #e65e3d; padding:10px 10px;}
       .blueIns{background-color: #5e8deb; padding:10px 10px; }
 /*ระยะห่าง*/
@@ -70,7 +72,7 @@
 .greenbox {background-color:  rgba(169, 60, 199, 0.2);}
 .darkgreenbox {background-color:  rgba(169, 60, 199, 0.5);}
 /*สีตัวหนังสือ*/
-      .greentext{color:#9b4747;;font-weight: bold;font-size:26px;}
+      .greentext{color:#4f7212;;font-weight: bold;font-size:26px;}
       .whitetext{color:#ffffff;font-weight: bold;font-size:18px;}
       .redtext{color:#d62128;font-weight: bold;font-size:26px;}
       .bluetext{color:#3366CC;font-weight: bold;font-size:26px;}
@@ -81,7 +83,7 @@
 .blacktextsim{font-weight: bold;font-size:40px;}
 /*ขีดเส้นใต้สำหรับ active เมนูต่างๆ*/
       .Linered {border-bottom: 5px solid #d62128;}
-      .Linegreen {border-bottom: 5px solid #996666;}
+      .Linegreen {border-bottom: 5px solid #7fa838;}
       .Lineblue {border-bottom: 5px solid #3366CC;}
       .underlinedot {border-bottom: 2px dashed #8c8b8b;}
 /*เมื่อชี้จะเปลี่ยนสี*/
@@ -89,7 +91,7 @@
       .changetogreen{}
       .changetoblue{}
       a.changetored:hover {color:#d62128;}
-      a.changetogreen:hover {color:#996666;}
+      a.changetogreen:hover {color:#7fa838;}
       a.changetoblue:hover {color:#3366CC;}
 /*ชิดซ้าย หรือขวา*/
       .left{text-align: left;}
@@ -169,6 +171,8 @@
 /* ตัวหนังสือใหญ่สำหรับสั่งซื้อซิมเท่านั้น*/
 .whitetextsim{color:#ffffff;font-weight: bold;font-size:120px;}
 .msgicon{width: 150px;}
+/*ปรับขนาดรูปซิมหน้าแรก*/
+.nav-sim-image {height: 100px;}
 }
 @media only screen and (max-width: 1200px) and (min-width: 993px){
   .imgcollapse{width:600px;border:black 1px solid;}
@@ -184,6 +188,8 @@
 .textforsale{font-size:22px;}
 .col-md-6{max-width: 100%;}
 .msgicon{width: 100px;}
+/*ปรับขนาดรูปซิมหน้าแรก*/
+      .nav-sim-image {height: 100px;}
 }
 
 
@@ -203,6 +209,8 @@
 .biggerfont{font-size:80px;}
 .col-md-6{max-width: 100%;}
 .msgicon{width: 80px;}
+/*ปรับขนาดรูปซิมหน้าแรก*/
+      .nav-sim-image {height: 100px;}
 }
 
 
@@ -225,6 +233,8 @@ p{font-family: Prompt;font-size:22px;color:#000000;}
 .biggerfont{font-size:60px;}
 .col-md-6{max-width: 100%;}
 .msgicon{width: 70px;}
+/*ปรับขนาดรูปซิมหน้าแรก*/
+      .nav-sim-image {height: 100px;}
 
 }
 @media only screen and (max-width: 600px){
@@ -246,4 +256,6 @@ p{font-family: Prompt;font-size:18px;color:#000000;}
 .biggerfont{font-size:42px;}
 .col-md-6{max-width: 100%;}
 .msgicon{width: 50px;}
+/*ปรับขนาดรูปซิมหน้าแรก*/
+      .nav-sim-image {height: 50px;}
 }
