add sinlnw product

--- a/assets/style15.css
+++ b/assets/style15.css
@@ -75,6 +75,7 @@
 /*สีตัวหนังสือ*/
       .greentext{color:#4f7212;;font-weight: bold;font-size:26px;}
       .whitetext{color:#ffffff;font-weight: bold;font-size:18px;}
+      .whitetexthead{color:#ffffff;font-weight: bold;font-size:18px;}
       .redtext{color:#d62128;font-weight: bold;font-size:26px;}
       .bluetext{color:#3366CC;font-weight: bold;font-size:26px;}
       .blacktext{color:#000000;font-weight: bold;font-size:26px;}
